--- a/website/login.html
+++ b/website/login.html
@@ -44,10 +44,10 @@
             <div class="tab-content">
                 <div class="tab-pane fade in active" id="login-area">
                     <form action="#" method="post" class="forms login-from">
+                        <div class="error warn-error"></div>
                         <p class="ipt-txt"><input type="text" name="accountName" value="" placeholder="账号" /></p>
                         <p class="ipt-txt"><input type="password" name="userPwd" value="" placeholder="密码" /></p>
                         <p class="ipt-txt ttr"><a href="resetLR.html" class="link-forget">忘记密码</a></p>
-                        <div class="error"></div>
                         <div class="btn-area">
                             <button type="submit" name="submit" class="ipt-submit">登录</button>
                             <a href="javascript:;">其它登录方式</a>
