--- a/website/register.html
+++ b/website/register.html
@@ -56,7 +56,7 @@
                         </p>
                         <p class="ipt-txt"><input type="password" name="userPwd" value="" placeholder="确认密码" /></p>
                         <p class="ipt-txt"><input type="text" name="inviteCode" value="" placeholder="邀请码选填" /></p>
-                        <div class="error reg-error"></div>
+                        <div class="error warn-error reg-error"></div>
                         <p class="ipt-txt">
                             <input type="checkbox" name="clause" value="" id="clause" />
                             <label for="clause">同意使用条款</label>
@@ -77,7 +77,7 @@
                         </p>
                         <p class="ipt-txt"><input type="password" name="userPwd" value="" placeholder="确认密码" /></p>
                         <p class="ipt-txt"><input type="text" name="inviteCode" value="" placeholder="邀请码选填" /></p>
-                        <div class="error reg-error"></div>
+                        <div class="error warn-error reg-error"></div>
                         <p class="ipt-txt">
                             <input type="checkbox" name="clause" value="" id="clause" />
                             <label for="clause">同意使用条款</label>
