--- a/website/resetLR.html
+++ b/website/resetLR.html
@@ -45,6 +45,7 @@
             <div class="tab-content">
                 <div class="tab-pane fade in active" id="personal-area">
                     <form action="#" method="post" class="forms personal-form">
+                        <div class="error warn-error"></div>
                         <p class="ipt-txt"><input type="text" name="telPhone" value="" placeholder="手机号" /></p>
                         <p class="ipt-txt">
                             <input type="text" name="imgVerifyCode" value="" class="wd190" placeholder="图片验证码" />
@@ -56,12 +57,12 @@
                         </p>
                         <p class="ipt-txt"><input type="password" name="userPwd" id="pUserPwd" value="" placeholder="密码" /></p>
                         <p class="ipt-txt"><input type="password" name="againPwd" value="" placeholder="确认密码" /></p>
-                        <div class="error"></div>
                         <button type="submit" name="submit" class="ipt-submit">重置密码</button>
                     </form>
                 </div>
                 <div class="tab-pane fade" id="company-area">
                     <form action="#" method="post" class="forms company-form">
+                        <div class="error warn-error"></div>
                         <p class="ipt-txt"><input type="text" name="telPhone" value="" placeholder="手机号" /></p>
                         <p class="ipt-txt">
                             <input type="text" name="imgVerifyCode" value="" class="wd190" placeholder="图片验证码" />
@@ -73,7 +74,6 @@
                         </p>
                         <p class="ipt-txt"><input type="password" name="userPwd" id="cUserPwd" value="" placeholder="密码" /></p>
                         <p class="ipt-txt"><input type="password" name="againPwd" value="" placeholder="确认密码" /></p>
-                        <div class="error"></div>
                         <button type="submit" name="submit" class="ipt-submit">重置密码</button>
                     </form>
                 </div>
