--- a/website/personal_edit.html
+++ b/website/personal_edit.html
@@ -83,6 +83,12 @@
                     </div>
                     <div class="right">
                         <dl>
+                            <dt>个人技能：</dt>
+                            <dd>
+                                <p class="orange">中级</p>
+                            </dd>
+                        </dl>
+                        <dl>
                             <dt>企业平均评分：</dt>
                             <dd>
                                 <p class="star star_03">80分</p>
@@ -150,14 +156,14 @@
                                         <div class="select-list">
                                             <ul>
                                                 <li data-value="1">1</li>
-                                                <li data-value="2">1</li>
-                                                <li data-value="3">1</li>
-                                                <li data-value="4">1</li>
-                                                <li data-value="5">1</li>
-                                                <li data-value="6">1</li>
-                                                <li data-value="7">1</li>
-                                                <li data-value="8">1</li>
-                                                <li data-value="9">1</li>
+                                                <li data-value="2">2</li>
+                                                <li data-value="3">3</li>
+                                                <li data-value="4">4</li>
+                                                <li data-value="5">5</li>
+                                                <li data-value="6">6</li>
+                                                <li data-value="7">7</li>
+                                                <li data-value="8">8</li>
+                                                <li data-value="9">9</li>
                                                 <li data-value="10">10</li>
                                                 <li data-value="11">11</li>
                                                 <li data-value="12">12</li>
